fix overlap on buttons/images

--- a/src/static/css/community.css
+++ b/src/static/css/community.css
@@ -39,6 +39,7 @@
   padding: 10px 20px;
   border-radius: 5px;
   transition: background-color 0.3s ease-in-out;
+  width: 80%;
 }
 
 .community-section a:hover {
@@ -48,7 +49,7 @@
 .community-image {
   width: 300px;
   height: 300px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   display: block;
   padding: 10px 20px;
 }
